add rwlock, move player to it's own struct with sockfd and pos, uncrustify and cmakelists config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.20.0)
 
 project(gs VERSION 0.0.1)
 
+set(CMAKE_C_STANDARD 17)
+
 file(GLOB_RECURSE SRC_FILES src/*.c)
 add_executable(gs ${SRC_FILES})
 
